fix: fix inputs z-index

--- a/src/entities/Input/Input.css
+++ b/src/entities/Input/Input.css
@@ -24,7 +24,7 @@
 	border: none;
 	background-color: transparent;
 	border-bottom: 1px solid var(--color-gray-shadow);
-	z-index: 2;
+	z-index: 1;
 	position: inherit;
 	font-family: 'Retni Sans';
 	font-size: 16px;
